<resources>
    <string name="app_name">TheHomeOfCar</string>
    <string name="individual_word">我</string>
    <string name="fanhui">返回</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="individual_login">立即登录,体验更多</string>
    <string name="individual_zhanghao">账号登录</string>
    <string name="individual_qq">QQ登录</string>
    <string name="individual_weibo">微博登录</string>
    <string name="individual_weixin">微信登录</string>
    <string name="individual_wode">我的优惠券</string>
    <string name="individual_shoucang">我的收藏</string>
    <string name="individual_history">浏览历史</string>
    <string name="individual_caogao">草稿箱</string>
    <string name="individual_shezhi">设置</string>
    <string name="indiviual_denglu">登录</string>
    <string name="individual_wangji">忘记密码</string>
    <string name="individual_other">还可以用以下方式登录</string>
    <string name="individual_yonghuming">手机号/邮箱/用户名</string>
    <string name="individual_password">密码</string>
    <string name="search_text">搜索关键词</string>
    <string name="search_quxiao">取消</string>
    <string name="discover_title">发现</string>
    <string name="video_textquanbu">全部</string>
    <string name="fastreport_text_quanbu">全部品牌</string>
    <string name="fastreport_text_jibie">全部级别</string>
    <string name="brand_text_shoucang">我的收藏</string>
    <string name="brand_text_history">浏览历史</string>
    <string name="brand_text_rexiao">热销排行</string>
    <string name="brand_text_remen">热门品牌</string>
    <string name="brand_text_zhuda">主打车</string>
    <string name="useforum_text_first">车系论坛</string>
    <string name="useforum_text_littleone">为你的爱车找到队伍</string>
    <string name="useforum_text_two">地区论坛</string>
    <string name="useforum_text_littletwo">老乡见老乡, 两眼泪汪汪</string>
    <string name="useforum_text_three">主题论坛</string>
    <string name="useforum_text_littlethree">兴趣爱好的聚集地</string>
    <string name="hotpost_text_remen">24小时内热门</string>
    <string name="filter_text_tiaojian">条件</string>
    <string name="filter_text_remenchexi">热门车系</string>
    <string name="depreciate_text_pinpai">品牌</string>
    <string name="depreciate_text_price">价格</string>
    <string name="depreciate_text_jibie">级别</string>
    <string name="depreciate_text_paixu">排序</string>
    <string name="depreciate_text_dalian">大连</string>
    <string name="secondcar_moren">默认排序</string>
    <string name="secondcar_pingpai">品牌</string>
    <string name="secondcar_licheng">价格·里程·车龄</string>
    <string name="discover_huodong">活动专区</string>
    <string name="secondcar_more">更多</string>
    <string name="public_shangping">商品详情</string>
    <string name="public_details_edit">发表回帖</string>
    <string name="public_details_current">1</string>
    <string name="public_details_all">/ALL</string>
    <string name="fastreport_detail_bianji">编辑:   </string>
    <string name="fastreport_detail_bobao">播报结束</string>
    <string name="fastreport_content">快报内容</string>
    <string name="fastreport_content_publish">发表评论...</string>
    <string name="depreciate_jisuan">购车计算</string>
    <string name="depreciate_call">立即拨打</string>
    <string name="depreciate_xundijia">询底价</string>
    <string name="depreciate_close">关闭</string>
    <string name="well_quanbu">全部</string>
    <string name="well_xifu">媳妇当车模</string>
    <string name="well_meiren">美人计</string>
    <string name="well_luntan">论坛名人堂</string>
    <string name="well_luntanjiangshi">论坛讲师</string>
    <string name="well_shinian">汽车之家十年</string>
    <string name="well_jingtiao">精挑细选</string>
    <string name="well_xianshen">现身说法</string>
    <string name="well_gaoduan">高端阵地</string>
    <string name="well_diandong">电动车</string>
    <string name="well_huimai">汇买车</string>
    <string name="well_xingche">行车点评</string>
    <string name="well_chaoji">超级试驾员</string>
    <string name="shangpingliebiao">商品列表</string>
    <string name="brand_jingping">品牌精品</string>
    <string name="hotsell">特惠热卖</string>
</resources>
