<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/individual_login_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">


        <ImageView
            style="@style/wrap"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/item_margin_small"
            android:src="@mipmap/login_return2" />

        <TextView
            style="@style/wrap"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/item_margin_small"
            android:text="@string/fanhui"
            android:textColor="@color/wordColor_blue"
            android:textSize="@dimen/textsize_normal" />
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/denglu"
            android:textSize="@dimen/textsize_big" />

        <TextView
            style="@style/wrap"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/padding_ten"
            android:text="@string/zhuce"
            android:textColor="@color/wordColor_blue" />


    </LinearLayout>

    <TextView style="@style/Line" />

    <View style="@style/individual_background"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/high_fifteen"
            android:background="@null"
            android:hint="@string/individual_yonghuming"
            android:paddingLeft="@dimen/bottom_small"
            android:textColorHint="@color/grayword_less"

            android:textSize="@dimen/textsize_little" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="@dimen/padding_ten"
        android:layout_marginRight="@dimen/padding_ten" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/high_fifteen"
            android:background="@null"
            android:hint="@string/individual_password"
            android:paddingLeft="@dimen/bottom_small"
            android:textColorHint="@color/grayword_less"
            android:textSize="@dimen/textsize_little" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayBackground"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/high_fifteen"
            android:background="@color/wordColor_blue"
            android:text="@string/indiviual_denglu"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/high_fifteen"
            android:background="@android:color/transparent"
            android:text="@string/individual_wangji"
            android:textColor="@color/wordColor_blue"
            android:textSize="@dimen/textsize_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_height_fifty"
            android:background="@color/grayBackground"
            android:orientation="horizontal"
            android:padding="@dimen/high_fifteen">

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/line_height"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/grayword_less" />

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/individual_other"
                android:textColor="@color/grayword_less"
                android:textSize="@dimen/textsize_smallest" />

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/line_height"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/grayword_less" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"


            >


            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grayBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grayBackground"
                    android:src="@mipmap/individual_weibo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/individual_weibo"
                    android:textSize="@dimen/textsize_small" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grayBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grayBackground"
                    android:src="@mipmap/individual_qq" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/individual_qq"
                    android:textSize="@dimen/textsize_small" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grayBackground"
                    android:src="@mipmap/individual_weixin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/grayBackground"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/individual_weixin"
                    android:textSize="@dimen/textsize_small" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>