<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/aty_public_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                style="@style/wrap"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/item_margin_small"
                android:src="@mipmap/login_return2" />

            <TextView
                style="@style/wrap"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/item_margin_small"
                android:text="@string/fanhui"
                android:textColor="@color/wordColor_blue"
                android:textSize="@dimen/textsize_normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/aty_public_title_tv"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/high_twenty"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/public_shangping"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:id="@+id/aty_public_other_tv"
            style="@style/wrap"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/padding_ten"
            android:text="@string/zhuce"
            android:textColor="@color/wordColor_blue"
            android:visibility="gone" />


    </LinearLayout>

    <TextView style="@style/Line" />

    <WebView
        android:id="@+id/aty_public_other_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></WebView>
</LinearLayout>