<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/discover_title"
            android:textSize="@dimen/textsize_normal" />

        <ImageView
            android:id="@+id/discover_search_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:paddingLeft="@dimen/padding_horizontal"
            android:paddingRight="@dimen/padding_horizontal"
            android:src="@mipmap/search1" />
    </FrameLayout>

    <TextView style="@style/Line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.youth.banner.Banner
                android:id="@+id/discover_recycler_picture"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hundred_thirty"
                android:background="#00000000" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/discover_car_media_rv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


            </android.support.v7.widget.RecyclerView>

            <TextView style="@style/Line" />


            <TextView style="@style/lineHeight_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_horizontal"
                android:text="@string/discover_huodong"
                android:textColor="@color/grayWord_much" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.jingjiang.thehomeofcar.widget.MyGridView
                    android:id="@+id/discover_activity_area_gv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"
                    android:stretchMode="columnWidth" />

            </LinearLayout>

            <TextView style="@style/Line" />

            <TextView style="@style/lineHeight_background" />

            <com.jingjiang.thehomeofcar.widget.MyGridView
                android:id="@+id/discover_car_business_gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:stretchMode="columnWidth" />

            <TextView style="@style/Line" />

            <TextView style="@style/lineHeight_background" />

            <TextView
                android:id="@+id/discover_hot_sell_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_horizontal"
                android:text="@string/hotsell"
                android:textColor="@color/grayWord_much" />

            <TextView style="@style/Line" />

            <com.jingjiang.thehomeofcar.widget.MyGridView
                android:id="@+id/discover_hot_sell_gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:stretchMode="columnWidth" />

            <TextView style="@style/Line" />

            <TextView style="@style/lineHeight_background" />

            <TextView
                android:id="@+id/discover_hot_sell_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_horizontal"
                android:text="@string/brand_jingping"
                android:textColor="@color/grayWord_much" />

            <TextView style="@style/Line" />

            <com.jingjiang.thehomeofcar.widget.MyGridView
                android:id="@+id/discover_hot_sell_brand_gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:stretchMode="columnWidth" />

            <TextView style="@style/Line" />

            <TextView style="@style/lineHeight_background" />

            <TextView
                android:id="@+id/discover_hot_sell_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_horizontal"
                android:text="@string/shangpingliebiao"
                android:textColor="@color/grayWord_much" />

            <TextView style="@style/Line" />


            <com.jingjiang.thehomeofcar.widget.NoScrollListView
                android:id="@+id/discover_lv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1">

            </com.jingjiang.thehomeofcar.widget.NoScrollListView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>